--- a/templates/forgot.html
+++ b/templates/forgot.html
@@ -13,18 +13,18 @@
                 </p>
 
                 <div class="row">
-
                     <div class="col-lg-12">
                         <form class="m-t" role="form" action="">
                             <div class="form-group">
                                 <input type="email" class="form-control" placeholder="Email address" required="">
                             </div>
-
                             <button type="submit" class="btn btn-primary block full-width m-b">Send new password</button>
-
                         </form>
                     </div>
                 </div>
+            </div>
+            <div class="ibox-footer">
+                <a href="{{ url_for('login') }}" class="btn btn-sm btn-outline"><i class="fa fa-times-circle"></i> Cancel</a>
             </div>
         </div>
     </div>
