--- a/templates/index.html
+++ b/templates/index.html
@@ -2,25 +2,30 @@
 {% block content %}
 {% if session.username %}
     <div class="middle-box text-center animated fadeInDown">
-        <h1 style="font-weight:bold;font-size:36px;">{{ session.teamname }}</h1>
-        <h3 class="text-primary"><small>You are now logged in...</small></h3>
         <div class="row">
             <div class="col-lg-12">
-                <div class="col-lg-6">
-                    <span class="label label-default">
-                        Username: {{ session.username }}
-                    </span>
-                </div>
-                <div class="col-lg-6">
-                    <span class="label label-default">
-                        User ID: {{ session.userid }}
-                    </span>
-                </div>
+                <img src="{{ url_for('static', filename='img/qc_logo_sm.png')}}" align="center">
+            </div>
+        </div>
+        <h1 style="font-weight:bold;font-size:36px;">{{ session.teamname }}</h1>
+        <h3><small class="text-primary">You are now logged in...</small></h3>
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <span class="label label-default"><i class="fa fa-user"></i> Username: {{ session.username }}</span>
+                <p>&nbsp;</p>
+                <span class="label label-default"><i class="fa fa-gear"></i> User ID: {{ session.userid }}</span>
             </div>
         </div>
         <div class="row" style="margin-top:50px;">
             <div class="col-lg-12">
                 <a href="{{ url_for('logout') }}" class="btn btn-success btn-sm"><i class="fa fa-lock"></i> Logout</a>
+            </div>
+        </div>
+        <div class="row" style="margin-top:40px;">
+            <div class="col-lg-12 text-center">
+                <small>
+                    Visit the <a href="http://qwikcut.cloudapp.net/stats">Stats site</a> to view your team statistics.
+                </small>
             </div>
         </div>
     </div>
